<resources>
    <!-- By: David Cui B00788648 -->
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="clearMem">MC</string>
    <string name="addToMem">M+</string>
    <string name="subtractFromMem">M-</string>
    <string name="readMem">MR</string>
    <!-->unicode for sign and math symbols<-->
    <string name="sign">\u00b1</string>
    <string name="add">\u002b</string>
    <string name="subtract">\u2212</string>
    <string name="multiply">\u00D7</string>
    <string name="divide">\u00F7</string>
</resources>
